--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,7 +1,8 @@
-<%= javascript_pack_tag 'app' %>
-<%= stylesheet_pack_tag 'app' %>
+<%= javascript_pack_tag "app" %>
+<%= stylesheet_pack_tag "app" %>
 
 <div id="app">
+  <navbar></navbar>
   <div class="container">
     <router-view></router-view>
   </div>
